--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "lucide-react": "^0.263.1"
+    "styled-jsx": "^5.1.2"    
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
